# Provectus-Analytics

./: .dockerignore  .env.example  .gitignore  ALUMNI_DATA_COLLECTION_PLAN.md  BUILD_FORM.gs  CLAUDE.md  Dockerfile  FSP_SUPPORT_EMAIL_DRAFT.md  HOW_TO_RUN.md  MIGRATION.md  PHASE2_FSP_FIELD_MEMO.md  PHASE7_FRAMEWORK_DECISION.md  PHASE9_AUTOMATION.md  PILOT_OUTREACH_EMAIL.md  Provectus.command  README.md  ROADMAP.md  SURVEY_FORM_SPEC.md  SYNTHETIC_DATA_README.md  Stage Check Form Builder.gs  Stage Check Form Spec.md  alumni_survey_emails.md  app.py  compute_ground_truth.py  generate_synthetic_fsp_data.py  ground_truth.xlsx  ground_truth_per_milestone.csv  ground_truth_rating_norms.csv  provectus.db-journal  pyproject.toml  railway.toml  requirements.txt  setup.cfg  synthetic_alumni_survey.csv  synthetic_alumni_survey.xlsx  synthetic_fsp_clients.csv  synthetic_fsp_data.xlsx  synthetic_fsp_invoices.csv  synthetic_fsp_reservations.csv  synthetic_stage_checks.csv
assets/: 00-theme-init.js  styles.css
docs/: 2026-06-27-per-user-access-spec.md  2026-06-27-user-access-management-spec.md  2026-06-28-stage-check-integration-spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.roles.test.tsx  App.test.tsx  App.tsx  main.tsx  test-setup.ts
src/provectus_analytics/: __init__.py  cli.py  dashboard.py  db.py  guesstimate.py  import_exports.py  ingest.py  milestones.py  norms.py  partition.py  reconcile.py  schema.py
tests/: conftest.py  test_end_to_end.py  test_norms.py  test_partition.py  test_rating_label.py  test_reconcile.py  test_stage_checks.py  test_survey_xlsx.py
tests/test_api/: conftest.py  test_adapters.py  test_flight_override.py  test_flights.py  test_healthz.py  test_import_rebuild.py  test_insights.py  test_instructors.py  test_kpis.py  test_meta.py  test_public_transparency.py  test_rating_detail.py  test_ratings.py  test_schemas.py  test_security_headers.py  test_student_detail.py  test_students.py  test_upload_fsp.py
tests/test_auth/: test_endpoints.py  test_instructor_role.py  test_page_access.py  test_passwords.py  test_profile.py  test_public_endpoint.py  test_rebuild_users.py  (+5 more)
tools/: build_boss_pdf.py  build_dist.sh  fsp_export_prompt.md  make_synthetic_stage_checks.py
(+119 files in other folders)
