[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "provectus-analytics"
version = "0.1.0"
description = "Analytics pipeline for Provectus flight training data (FSP + alumni survey)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Auth (Phase 11)
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
    "email-validator>=2.0",
    # Upload (Phase 12)
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[project.scripts]
provectus-analytics = "provectus_analytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
